parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    ACC
    DIVEQUAL
    USCORE
    MODEQUAL
    RBRACE
    PLUSEQUAL
    LBRACE
    INT
    MINUSEQUAL
    CONCATEQUAL
    TIMESEQUAL

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement_list statement
Rule 4     statement -> declaration_statement
Rule 5     statement -> synonym_statement
Rule 6     statement -> newmode_statement
Rule 7     statement -> procedure_statement
Rule 8     statement -> action_statement
Rule 9     declaration_statement -> DCL declaration_list SEMI
Rule 10    declaration_list -> declaration
Rule 11    declaration_list -> declaration_list COMMA declaration
Rule 12    declaration -> identifier_list mode initialization
Rule 13    declaration -> identifier_list mode
Rule 14    initialization -> ASSIGN expression
Rule 15    identifier_list -> identifier
Rule 16    identifier_list -> identifier_list COMMA identifier
Rule 17    identifier -> ID
Rule 18    synonym_statement -> SYN synonym_list SEMI
Rule 19    synonym_list -> synonym_definition
Rule 20    synonym_list -> synonym_list COMMA synonym_definition
Rule 21    synonym_definition -> identifier_list mode ASSIGN constant_expression
Rule 22    synonym_definition -> identifier_list ASSIGN constant_expression
Rule 23    constant_expression -> expression
Rule 24    newmode_statement -> TYPE newmode_list
Rule 25    newmode_list -> mode_definition
Rule 26    newmode_list -> newmode_list COMMA mode_definition
Rule 27    mode_definition -> identifier_list ASSIGN mode
Rule 28    mode -> mode_name
Rule 29    mode -> discrete_mode
Rule 30    mode -> reference_mode
Rule 31    mode -> composite_mode
Rule 32    discrete_mode -> integer_mode
Rule 33    discrete_mode -> boolean_mode
Rule 34    discrete_mode -> character_mode
Rule 35    discrete_mode -> discrete_range_mode
Rule 36    integer_mode -> ICONST
Rule 37    boolean_mode -> BOOL
Rule 38    character_mode -> CHAR
Rule 39    discrete_range_mode -> discrete_mode_name LPAREN literal_range RPAREN
Rule 40    discrete_range_mode -> discrete_mode LPAREN literal_range RPAREN
Rule 41    mode_name -> identifier
Rule 42    discrete_mode_name -> identifier
Rule 43    literal_range -> lower_bound COLON upper_bound
Rule 44    lower_bound -> integer_literal
Rule 45    upper_bound -> integer_literal
Rule 46    reference_mode -> REF mode
Rule 47    composite_mode -> string_mode
Rule 48    composite_mode -> array_mode
Rule 49    string_mode -> CHARS LBRACKET string_length RBRACKET
Rule 50    string_length -> integer_literal
Rule 51    array_mode -> ARRAY LBRACKET index_mode RBRACKET
Rule 52    array_mode -> ARRAY LBRACKET index_mode COMMA index_mode_list RBRACKET
Rule 53    index_mode_list -> index_mode
Rule 54    index_mode_list -> index_mode_list COMMA index_mode
Rule 55    index_mode -> discrete_mode
Rule 56    index_mode -> literal_range
Rule 57    element_mode -> mode
Rule 58    location -> identifier
Rule 59    location -> dereferenced_reference
Rule 60    location -> string_element
Rule 61    location -> string_slice
Rule 62    location -> array_element
Rule 63    location -> array_slice
Rule 64    location -> call_action
Rule 65    dereferenced_reference -> location ARROW
Rule 66    string_element -> string_location LBRACKET start_element COLON right_element RBRACKET
Rule 67    start_element -> ICONST
Rule 68    string_slice -> string_location LBRACKET left_element COLON right_element RBRACKET
Rule 69    string_location -> identifier
Rule 70    left_element -> ICONST
Rule 71    right_element -> ICONST
Rule 72    array_element -> string_location LBRACKET expression_list RBRACKET
Rule 73    expression_list -> expression
Rule 74    expression_list -> expression_list COMMA expression
Rule 75    array_slice -> array_location LBRACKET lower_element COLON upper_element RBRACKET
Rule 76    array_location -> location
Rule 77    lower_element -> expression
Rule 78    upper_element -> expression
Rule 79    primitive_value -> literal
Rule 80    primitive_value -> value_array_element
Rule 81    primitive_value -> value_array_slice
Rule 82    primitive_value -> parenthesized_expression
Rule 83    literal -> integer_literal
Rule 84    literal -> boolean_literal
Rule 85    literal -> character_literal
Rule 86    literal -> empty_literal
Rule 87    literal -> character_string_literal
Rule 88    integer_literal -> ICONST
Rule 89    boolean_literal -> FALSE
Rule 90    boolean_literal -> TRUE
Rule 91    character_literal -> CCONST
Rule 92    empty_literal -> NULL
Rule 93    character_string_literal -> SCONST
Rule 94    value_array_element -> array_primitive_value LBRACKET expression_list RBRACKET
Rule 95    value_array_slice -> array_primitive_value LBRACKET lower_element COLON upper_element RBRACKET
Rule 96    array_primitive_value -> primitive_value
Rule 97    parenthesized_expression -> LPAREN expression RPAREN
Rule 98    expression -> operand0
Rule 99    expression -> conditional_expression
Rule 100   conditional_expression -> IF boolean_expression then_expression else_expression FI
Rule 101   conditional_expression -> IF boolean_expression then_expression elsif_expression else_expression FI
Rule 102   boolean_expression -> expression
Rule 103   then_expression -> THEN expression
Rule 104   else_expression -> ELSE expression
Rule 105   elsif_expression -> ELSIF boolean_expression then_expression
Rule 106   elsif_expression -> elsif_expression ELSIF boolean_expression then_expression
Rule 107   operand0 -> operand1
Rule 108   operand0 -> operand0 operator1 operand1
Rule 109   operator1 -> relational_operator
Rule 110   operator1 -> membership_operator
Rule 111   relational_operator -> AND
Rule 112   relational_operator -> OR
Rule 113   relational_operator -> EQ
Rule 114   relational_operator -> NEQ
Rule 115   relational_operator -> GT
Rule 116   relational_operator -> GE
Rule 117   relational_operator -> LT
Rule 118   relational_operator -> LE
Rule 119   membership_operator -> IN
Rule 120   operand1 -> operand2
Rule 121   operand1 -> operand1 operator2 operand2
Rule 122   operator2 -> arithmetic_additive_operator
Rule 123   operator2 -> string_concatenation_operator
Rule 124   arithmetic_additive_operator -> PLUS
Rule 125   arithmetic_additive_operator -> MINUS
Rule 126   string_concatenation_operator -> CONCAT
Rule 127   operand2 -> operand3
Rule 128   operand2 -> operand2 arithmetic_multiplicative_operator operand3
Rule 129   arithmetic_multiplicative_operator -> TIMES
Rule 130   arithmetic_multiplicative_operator -> DIVIDE
Rule 131   arithmetic_multiplicative_operator -> MOD
Rule 132   operand3 -> monadic_operator operand4
Rule 133   operand3 -> integer_literal
Rule 134   monadic_operator -> MINUS
Rule 135   monadic_operator -> NOT
Rule 136   operand4 -> location
Rule 137   operand4 -> referenced_location
Rule 138   operand4 -> primitive_value
Rule 139   referenced_location -> ARROW location
Rule 140   action_statement -> label_id COLON action SEMI
Rule 141   action_statement -> action SEMI
Rule 142   label_id -> identifier
Rule 143   action -> bracketed_action
Rule 144   action -> assignment_action
Rule 145   action -> call_action
Rule 146   action -> exit_action
Rule 147   action -> return_action
Rule 148   action -> result_action
Rule 149   bracketed_action -> if_action
Rule 150   bracketed_action -> do_action
Rule 151   assignment_action -> location assigning_operator expression
Rule 152   assigning_operator -> closed_dyadic_operator assignment_symbol
Rule 153   assigning_operator -> assignment_symbol
Rule 154   closed_dyadic_operator -> arithmetic_additive_operator
Rule 155   closed_dyadic_operator -> arithmetic_multiplicative_operator
Rule 156   closed_dyadic_operator -> string_concatenation_operator
Rule 157   assignment_symbol -> ASSIGN
Rule 158   if_action -> IF boolean_expression then_clause else_clause FI
Rule 159   if_action -> IF boolean_expression then_clause FI
Rule 160   then_clause -> THEN action_statement_list
Rule 161   else_clause -> ELSE action_statement_list
Rule 162   else_clause -> ELSIF boolean_expression then_clause else_clause
Rule 163   else_clause -> ELSIF boolean_expression then_clause
Rule 164   do_action -> DO control_part SEMI action_statement_list OD
Rule 165   do_action -> DO action_statement_list OD
Rule 166   control_part -> for_control while_control
Rule 167   control_part -> while_control
Rule 168   for_control -> FOR iteration
Rule 169   iteration -> step_enumeration
Rule 170   iteration -> range_enumeration
Rule 171   step_enumeration -> loop_counter ASSIGN start_value step_value DOWN end_value
Rule 172   step_enumeration -> loop_counter ASSIGN start_value DOWN end_value
Rule 173   step_enumeration -> loop_counter ASSIGN start_value step_value end_value
Rule 174   step_enumeration -> loop_counter ASSIGN start_value end_value
Rule 175   loop_counter -> identifier
Rule 176   start_value -> discrete_expression
Rule 177   step_value -> BY ICONST
Rule 178   end_value -> TO discrete_expression
Rule 179   discrete_expression -> expression
Rule 180   range_enumeration -> loop_counter DOWN IN discrete_mode_name
Rule 181   range_enumeration -> loop_counter IN discrete_mode_name
Rule 182   while_control -> WHILE boolean_expression
Rule 183   call_action -> procedure_call
Rule 184   call_action -> builtin_call
Rule 185   procedure_call -> procedure_name LPAREN parameter_list RPAREN
Rule 186   procedure_call -> procedure_name LPAREN RPAREN
Rule 187   parameter_list -> parameter
Rule 188   parameter_list -> parameter_list COMMA parameter
Rule 189   parameter -> expression
Rule 190   procedure_name -> identifier
Rule 191   exit_action -> EXIT label_id
Rule 192   return_action -> RETURN result
Rule 193   return_action -> RETURN
Rule 194   result_action -> RESULT result
Rule 195   result -> expression
Rule 196   builtin_call -> builtin_name LPAREN parameter_list RPAREN
Rule 197   builtin_call -> builtin_name LPAREN RPAREN
Rule 198   builtin_name -> NUM
Rule 199   builtin_name -> PRED
Rule 200   builtin_name -> SUCC
Rule 201   builtin_name -> UPPER
Rule 202   builtin_name -> LOWER
Rule 203   builtin_name -> LENGTH
Rule 204   builtin_name -> READ
Rule 205   builtin_name -> PRINT
Rule 206   procedure_statement -> label_id COLON procedure_definition SEMI
Rule 207   procedure_definition -> PROC LPAREN formal_parameter_list RPAREN result_spec SEMI action_statement action_statement_list END
Rule 208   procedure_definition -> PROC LPAREN formal_parameter_list RPAREN result_spec SEMI action_statement END
Rule 209   procedure_definition -> PROC LPAREN RPAREN SEMI action_statement action_statement_list END
Rule 210   procedure_definition -> PROC LPAREN RPAREN SEMI action_statement END
Rule 211   action_statement_list -> action_statement
Rule 212   action_statement_list -> action_statement_list COMMA action_statement
Rule 213   formal_parameter_list -> formal_parameter
Rule 214   formal_parameter_list -> formal_parameter_list COMMA formal_parameter
Rule 215   formal_parameter -> identifier_list parameter_spec
Rule 216   parameter_spec -> mode attribute
Rule 217   parameter_spec -> mode
Rule 218   result_spec -> RETURNS LPAREN mode attribute RPAREN
Rule 219   result_spec -> RETURNS LPAREN mode RPAREN
Rule 220   attribute -> LOC

Terminals, with rules where they appear

ACC                  : 
AND                  : 111
ARRAY                : 51 52
ARROW                : 65 139
ASSIGN               : 14 21 22 27 157 171 172 173 174
BOOL                 : 37
BY                   : 177
CCONST               : 91
CHAR                 : 38
CHARS                : 49
COLON                : 43 66 68 75 95 140 206
COMMA                : 11 16 20 26 52 54 74 188 212 214
CONCAT               : 126
CONCATEQUAL          : 
DCL                  : 9
DIVEQUAL             : 
DIVIDE               : 130
DO                   : 164 165
DOWN                 : 171 172 180
ELSE                 : 104 161
ELSIF                : 105 106 162 163
END                  : 207 208 209 210
EQ                   : 113
EXIT                 : 191
FALSE                : 89
FI                   : 100 101 158 159
FOR                  : 168
GE                   : 116
GT                   : 115
ICONST               : 36 67 70 71 88 177
ID                   : 17
IF                   : 100 101 158 159
IN                   : 119 180 181
INT                  : 
LBRACE               : 
LBRACKET             : 49 51 52 66 68 72 75 94 95
LE                   : 118
LENGTH               : 203
LOC                  : 220
LOWER                : 202
LPAREN               : 39 40 97 185 186 196 197 207 208 209 210 218 219
LT                   : 117
MINUS                : 125 134
MINUSEQUAL           : 
MOD                  : 131
MODEQUAL             : 
NEQ                  : 114
NOT                  : 135
NULL                 : 92
NUM                  : 198
OD                   : 164 165
OR                   : 112
PLUS                 : 124
PLUSEQUAL            : 
PRED                 : 199
PRINT                : 205
PROC                 : 207 208 209 210
RBRACE               : 
RBRACKET             : 49 51 52 66 68 72 75 94 95
READ                 : 204
REF                  : 46
RESULT               : 194
RETURN               : 192 193
RETURNS              : 218 219
RPAREN               : 39 40 97 185 186 196 197 207 208 209 210 218 219
SCONST               : 93
SEMI                 : 9 18 140 141 164 206 207 208 209 210
SUCC                 : 200
SYN                  : 18
THEN                 : 103 160
TIMES                : 129
TIMESEQUAL           : 
TO                   : 178
TRUE                 : 90
TYPE                 : 24
UPPER                : 201
USCORE               : 
WHILE                : 182
error                : 

Nonterminals, with rules where they appear

action               : 140 141
action_statement     : 8 207 208 209 210 211 212
action_statement_list : 160 161 164 165 207 209 212
arithmetic_additive_operator : 122 154
arithmetic_multiplicative_operator : 128 155
array_element        : 62
array_location       : 75
array_mode           : 48
array_primitive_value : 94 95
array_slice          : 63
assigning_operator   : 151
assignment_action    : 144
assignment_symbol    : 152 153
attribute            : 216 218
boolean_expression   : 100 101 105 106 158 159 162 163 182
boolean_literal      : 84
boolean_mode         : 33
bracketed_action     : 143
builtin_call         : 184
builtin_name         : 196 197
call_action          : 64 145
character_literal    : 85
character_mode       : 34
character_string_literal : 87
closed_dyadic_operator : 152
composite_mode       : 31
conditional_expression : 99
constant_expression  : 21 22
control_part         : 164
declaration          : 10 11
declaration_list     : 9 11
declaration_statement : 4
dereferenced_reference : 59
discrete_expression  : 176 178
discrete_mode        : 29 40 55
discrete_mode_name   : 39 180 181
discrete_range_mode  : 35
do_action            : 150
element_mode         : 
else_clause          : 158 162
else_expression      : 100 101
elsif_expression     : 101 106
empty_literal        : 86
end_value            : 171 172 173 174
exit_action          : 146
expression           : 14 23 73 74 77 78 97 102 103 104 151 179 189 195
expression_list      : 72 74 94
for_control          : 166
formal_parameter     : 213 214
formal_parameter_list : 207 208 214
identifier           : 15 16 41 42 58 69 142 175 190
identifier_list      : 12 13 16 21 22 27 215
if_action            : 149
index_mode           : 51 52 53 54
index_mode_list      : 52 54
initialization       : 12
integer_literal      : 44 45 50 83 133
integer_mode         : 32
iteration            : 168
label_id             : 140 191 206
left_element         : 68
literal              : 79
literal_range        : 39 40 56
location             : 65 76 136 139 151
loop_counter         : 171 172 173 174 180 181
lower_bound          : 43
lower_element        : 75 95
membership_operator  : 110
mode                 : 12 13 21 27 46 57 216 217 218 219
mode_definition      : 25 26
mode_name            : 28
monadic_operator     : 132
newmode_list         : 24 26
newmode_statement    : 6
operand0             : 98 108
operand1             : 107 108 121
operand2             : 120 121 128
operand3             : 127 128
operand4             : 132
operator1            : 108
operator2            : 121
parameter            : 187 188
parameter_list       : 185 188 196
parameter_spec       : 215
parenthesized_expression : 82
primitive_value      : 96 138
procedure_call       : 183
procedure_definition : 206
procedure_name       : 185 186
procedure_statement  : 7
program              : 0
range_enumeration    : 170
reference_mode       : 30
referenced_location  : 137
relational_operator  : 109
result               : 192 194
result_action        : 148
result_spec          : 207 208
return_action        : 147
right_element        : 66 68
start_element        : 66
start_value          : 171 172 173 174
statement            : 2 3
statement_list       : 1 3
step_enumeration     : 169
step_value           : 171 173
string_concatenation_operator : 123 156
string_element       : 60
string_length        : 49
string_location      : 66 68 72
string_mode          : 47
string_slice         : 61
synonym_definition   : 19 20
synonym_list         : 18 20
synonym_statement    : 5
then_clause          : 158 159 162 163
then_expression      : 100 101 105 106
upper_bound          : 43
upper_element        : 75 95
value_array_element  : 80
value_array_slice    : 81
while_control        : 166 167

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . declaration_statement
    (5) statement -> . synonym_statement
    (6) statement -> . newmode_statement
    (7) statement -> . procedure_statement
    (8) statement -> . action_statement
    (9) declaration_statement -> . DCL declaration_list SEMI
    (18) synonym_statement -> . SYN synonym_list SEMI
    (24) newmode_statement -> . TYPE newmode_list
    (206) procedure_statement -> . label_id COLON procedure_definition SEMI
    (140) action_statement -> . label_id COLON action SEMI
    (141) action_statement -> . action SEMI
    (142) label_id -> . identifier
    (143) action -> . bracketed_action
    (144) action -> . assignment_action
    (145) action -> . call_action
    (146) action -> . exit_action
    (147) action -> . return_action
    (148) action -> . result_action
    (17) identifier -> . ID
    (149) bracketed_action -> . if_action
    (150) bracketed_action -> . do_action
    (151) assignment_action -> . location assigning_operator expression
    (183) call_action -> . procedure_call
    (184) call_action -> . builtin_call
    (191) exit_action -> . EXIT label_id
    (192) return_action -> . RETURN result
    (193) return_action -> . RETURN
    (194) result_action -> . RESULT result
    (158) if_action -> . IF boolean_expression then_clause else_clause FI
    (159) if_action -> . IF boolean_expression then_clause FI
    (164) do_action -> . DO control_part SEMI action_statement_list OD
    (165) do_action -> . DO action_statement_list OD
    (58) location -> . identifier
    (59) location -> . dereferenced_reference
    (60) location -> . string_element
    (61) location -> . string_slice
    (62) location -> . array_element
    (63) location -> . array_slice
    (64) location -> . call_action
    (185) procedure_call -> . procedure_name LPAREN parameter_list RPAREN
    (186) procedure_call -> . procedure_name LPAREN RPAREN
    (196) builtin_call -> . builtin_name LPAREN parameter_list RPAREN
    (197) builtin_call -> . builtin_name LPAREN RPAREN
    (65) dereferenced_reference -> . location ARROW
    (66) string_element -> . string_location LBRACKET start_element COLON right_element RBRACKET
    (68) string_slice -> . string_location LBRACKET left_element COLON right_element RBRACKET
    (72) array_element -> . string_location LBRACKET expression_list RBRACKET
    (75) array_slice -> . array_location LBRACKET lower_element COLON upper_element RBRACKET
    (190) procedure_name -> . identifier
    (198) builtin_name -> . NUM
    (199) builtin_name -> . PRED
    (200) builtin_name -> . SUCC
    (201) builtin_name -> . UPPER
    (202) builtin_name -> . LOWER
    (203) builtin_name -> . LENGTH
    (204) builtin_name -> . READ
    (205) builtin_name -> . PRINT
    (69) string_location -> . identifier
    (76) array_location -> . location

    DCL             shift and go to state 17
    SYN             shift and go to state 41
    TYPE            shift and go to state 40
    ID              shift and go to state 36
    EXIT            shift and go to state 44
    RETURN          shift and go to state 2
    RESULT          shift and go to state 33
    IF              shift and go to state 37
    DO              shift and go to state 4
    NUM             shift and go to state 30
    PRED            shift and go to state 10
    SUCC            shift and go to state 11
    UPPER           shift and go to state 38
    LOWER           shift and go to state 18
    LENGTH          shift and go to state 19
    READ            shift and go to state 21
    PRINT           shift and go to state 26

    assignment_action              shift and go to state 1
    bracketed_action               shift and go to state 3
    synonym_statement              shift and go to state 5
    string_location                shift and go to state 6
    result_action                  shift and go to state 8
    return_action                  shift and go to state 12
    array_element                  shift and go to state 7
    procedure_call                 shift and go to state 13
    do_action                      shift and go to state 14
    if_action                      shift and go to state 15
    string_element                 shift and go to state 16
    procedure_statement            shift and go to state 20
    label_id                       shift and go to state 22
    program                        shift and go to state 23
    location                       shift and go to state 24
    call_action                    shift and go to state 31
    builtin_call                   shift and go to state 28
    procedure_name                 shift and go to state 29
    statement                      shift and go to state 25
    statement_list                 shift and go to state 32
    exit_action                    shift and go to state 34
    newmode_statement              shift and go to state 35
    dereferenced_reference         shift and go to state 39
    builtin_name                   shift and go to state 9
    array_location                 shift and go to state 42
    declaration_statement          shift and go to state 43
    string_slice                   shift and go to state 27
    array_slice                    shift and go to state 45
    action                         shift and go to state 46
    identifier                     shift and go to state 47
    action_statement               shift and go to state 48

state 1

    (144) action -> assignment_action .

    SEMI            reduce using rule 144 (action -> assignment_action .)


state 2

    (192) return_action -> RETURN . result
    (193) return_action -> RETURN .
    (195) result -> . expression
    (98) expression -> . operand0
    (99) expression -> . conditional_expression
    (107) operand0 -> . operand1
    (108) operand0 -> . operand0 operator1 operand1
    (100) conditional_expression -> . IF boolean_expression then_expression else_expression FI
    (101) conditional_expression -> . IF boolean_expression then_expression elsif_expression else_expression FI
    (120) operand1 -> . operand2
    (121) operand1 -> . operand1 operator2 operand2
    (127) operand2 -> . operand3
    (128) operand2 -> . operand2 arithmetic_multiplicative_operator operand3
    (132) operand3 -> . monadic_operator operand4
    (133) operand3 -> . integer_literal
    (134) monadic_operator -> . MINUS
    (135) monadic_operator -> . NOT
    (88) integer_literal -> . ICONST

    SEMI            reduce using rule 193 (return_action -> RETURN .)
    IF              shift and go to state 58
    MINUS           shift and go to state 50
    NOT             shift and go to state 60
    ICONST          shift and go to state 56

    operand2                       shift and go to state 54
    operand1                       shift and go to state 51
    operand0                       shift and go to state 52
    operand3                       shift and go to state 53
    result                         shift and go to state 49
    conditional_expression         shift and go to state 59
    monadic_operator               shift and go to state 55
    expression                     shift and go to state 61
    integer_literal                shift and go to state 57

state 3

    (143) action -> bracketed_action .

    SEMI            reduce using rule 143 (action -> bracketed_action .)


state 4

    (164) do_action -> DO . control_part SEMI action_statement_list OD
    (165) do_action -> DO . action_statement_list OD
    (166) control_part -> . for_control while_control
    (167) control_part -> . while_control
    (211) action_statement_list -> . action_statement
    (212) action_statement_list -> . action_statement_list COMMA action_statement
    (168) for_control -> . FOR iteration
    (182) while_control -> . WHILE boolean_expression
    (140) action_statement -> . label_id COLON action SEMI
    (141) action_statement -> . action SEMI
    (142) label_id -> . identifier
    (143) action -> . bracketed_action
    (144) action -> . assignment_action
    (145) action -> . call_action
    (146) action -> . exit_action
    (147) action -> . return_action
    (148) action -> . result_action
    (17) identifier -> . ID
    (149) bracketed_action -> . if_action
    (150) bracketed_action -> . do_action
    (151) assignment_action -> . location assigning_operator expression
    (183) call_action -> . procedure_call
    (184) call_action -> . builtin_call
    (191) exit_action -> . EXIT label_id
    (192) return_action -> . RETURN result
    (193) return_action -> . RETURN
    (194) result_action -> . RESULT result
    (158) if_action -> . IF boolean_expression then_clause else_clause FI
    (159) if_action -> . IF boolean_expression then_clause FI
    (164) do_action -> . DO control_part SEMI action_statement_list OD
    (165) do_action -> . DO action_statement_list OD
    (58) location -> . identifier
    (59) location -> . dereferenced_reference
    (60) location -> . string_element
    (61) location -> . string_slice
    (62) location -> . array_element
    (63) location -> . array_slice
    (64) location -> . call_action
    (185) procedure_call -> . procedure_name LPAREN parameter_list RPAREN
    (186) procedure_call -> . procedure_name LPAREN RPAREN
    (196) builtin_call -> . builtin_name LPAREN parameter_list RPAREN
    (197) builtin_call -> . builtin_name LPAREN RPAREN
    (65) dereferenced_reference -> . location ARROW
    (66) string_element -> . string_location LBRACKET start_element COLON right_element RBRACKET
    (68) string_slice -> . string_location LBRACKET left_element COLON right_element RBRACKET
    (72) array_element -> . string_location LBRACKET expression_list RBRACKET
    (75) array_slice -> . array_location LBRACKET lower_element COLON upper_element RBRACKET
    (190) procedure_name -> . identifier
    (198) builtin_name -> . NUM
    (199) builtin_name -> . PRED
    (200) builtin_name -> . SUCC
    (201) builtin_name -> . UPPER
    (202) builtin_name -> . LOWER
    (203) builtin_name -> . LENGTH
    (204) builtin_name -> . READ
    (205) builtin_name -> . PRINT
    (69) string_location -> . identifier
    (76) array_location -> . location

    FOR             shift and go to state 67
    WHILE           shift and go to state 62
    ID              shift and go to state 36
    EXIT            shift and go to state 44
    RETURN          shift and go to state 2
    RESULT          shift and go to state 33
    IF              shift and go to state 37
    DO              shift and go to state 4
    NUM             shift and go to state 30
    PRED            shift and go to state 10
    SUCC            shift and go to state 11
    UPPER           shift and go to state 38
    LOWER           shift and go to state 18
    LENGTH          shift and go to state 19
    READ            shift and go to state 21
    PRINT           shift and go to state 26

    assignment_action              shift and go to state 1
    bracketed_action               shift and go to state 3
    result_action                  shift and go to state 8
    array_element                  shift and go to state 7
    procedure_call                 shift and go to state 13
    do_action                      shift and go to state 14
    action_statement_list          shift and go to state 63
    if_action                      shift and go to state 15
    string_element                 shift and go to state 16
    control_part                   shift and go to state 64
    while_control                  shift and go to state 68
    return_action                  shift and go to state 12
    label_id                       shift and go to state 66
    location                       shift and go to state 24
    exit_action                    shift and go to state 34
    builtin_call                   shift and go to state 28
    procedure_name                 shift and go to state 29
    call_action                    shift and go to state 31
    for_control                    shift and go to state 65
    dereferenced_reference         shift and go to state 39
    builtin_name                   shift and go to state 9
    array_location                 shift and go to state 42
    string_slice                   shift and go to state 27
    array_slice                    shift and go to state 45
    action                         shift and go to state 46
    string_location                shift and go to state 6
    identifier                     shift and go to state 47
    action_statement               shift and go to state 69

state 5

    (5) statement -> synonym_statement .

    DCL             reduce using rule 5 (statement -> synonym_statement .)
    SYN             reduce using rule 5 (statement -> synonym_statement .)
    TYPE            reduce using rule 5 (statement -> synonym_statement .)
    ID              reduce using rule 5 (statement -> synonym_statement .)
    EXIT            reduce using rule 5 (statement -> synonym_statement .)
    RETURN          reduce using rule 5 (statement -> synonym_statement .)
    RESULT          reduce using rule 5 (statement -> synonym_statement .)
    IF              reduce using rule 5 (statement -> synonym_statement .)
    DO              reduce using rule 5 (statement -> synonym_statement .)
    NUM             reduce using rule 5 (statement -> synonym_statement .)
    PRED            reduce using rule 5 (statement -> synonym_statement .)
    SUCC            reduce using rule 5 (statement -> synonym_statement .)
    UPPER           reduce using rule 5 (statement -> synonym_statement .)
    LOWER           reduce using rule 5 (statement -> synonym_statement .)
    LENGTH          reduce using rule 5 (statement -> synonym_statement .)
    READ            reduce using rule 5 (statement -> synonym_statement .)
    PRINT           reduce using rule 5 (statement -> synonym_statement .)
    $end            reduce using rule 5 (statement -> synonym_statement .)


state 6

    (66) string_element -> string_location . LBRACKET start_element COLON right_element RBRACKET
    (68) string_slice -> string_location . LBRACKET left_element COLON right_element RBRACKET
    (72) array_element -> string_location . LBRACKET expression_list RBRACKET

    LBRACKET        shift and go to state 70


state 7

    (62) location -> array_element .

    ARROW           reduce using rule 62 (location -> array_element .)
    ASSIGN          reduce using rule 62 (location -> array_element .)
    PLUS            reduce using rule 62 (location -> array_element .)
    MINUS           reduce using rule 62 (location -> array_element .)
    TIMES           reduce using rule 62 (location -> array_element .)
    DIVIDE          reduce using rule 62 (location -> array_element .)
    MOD             reduce using rule 62 (location -> array_element .)
    CONCAT          reduce using rule 62 (location -> array_element .)
    LBRACKET        reduce using rule 62 (location -> array_element .)
    AND             reduce using rule 62 (location -> array_element .)
    OR              reduce using rule 62 (location -> array_element .)
    EQ              reduce using rule 62 (location -> array_element .)
    NEQ             reduce using rule 62 (location -> array_element .)
    GT              reduce using rule 62 (location -> array_element .)
    GE              reduce using rule 62 (location -> array_element .)
    LT              reduce using rule 62 (location -> array_element .)
    LE              reduce using rule 62 (location -> array_element .)
    IN              reduce using rule 62 (location -> array_element .)
    SEMI            reduce using rule 62 (location -> array_element .)
    THEN            reduce using rule 62 (location -> array_element .)
    RBRACKET        reduce using rule 62 (location -> array_element .)
    COMMA           reduce using rule 62 (location -> array_element .)
    RPAREN          reduce using rule 62 (location -> array_element .)
    COLON           reduce using rule 62 (location -> array_element .)
    ELSE            reduce using rule 62 (location -> array_element .)
    ELSIF           reduce using rule 62 (location -> array_element .)
    DOWN            reduce using rule 62 (location -> array_element .)
    BY              reduce using rule 62 (location -> array_element .)
    TO              reduce using rule 62 (location -> array_element .)
    FI              reduce using rule 62 (location -> array_element .)
    WHILE           reduce using rule 62 (location -> array_element .)


state 8

    (148) action -> result_action .

    SEMI            reduce using rule 148 (action -> result_action .)


state 9

    (196) builtin_call -> builtin_name . LPAREN parameter_list RPAREN
    (197) builtin_call -> builtin_name . LPAREN RPAREN

    LPAREN          shift and go to state 71


state 10

    (199) builtin_name -> PRED .

    LPAREN          reduce using rule 199 (builtin_name -> PRED .)


state 11

    (200) builtin_name -> SUCC .

    LPAREN          reduce using rule 200 (builtin_name -> SUCC .)


state 12

    (147) action -> return_action .

    SEMI            reduce using rule 147 (action -> return_action .)


state 13

    (183) call_action -> procedure_call .

    SEMI            reduce using rule 183 (call_action -> procedure_call .)
    ARROW           reduce using rule 183 (call_action -> procedure_call .)
    ASSIGN          reduce using rule 183 (call_action -> procedure_call .)
    PLUS            reduce using rule 183 (call_action -> procedure_call .)
    MINUS           reduce using rule 183 (call_action -> procedure_call .)
    TIMES           reduce using rule 183 (call_action -> procedure_call .)
    DIVIDE          reduce using rule 183 (call_action -> procedure_call .)
    MOD             reduce using rule 183 (call_action -> procedure_call .)
    CONCAT          reduce using rule 183 (call_action -> procedure_call .)
    LBRACKET        reduce using rule 183 (call_action -> procedure_call .)
    AND             reduce using rule 183 (call_action -> procedure_call .)
    OR              reduce using rule 183 (call_action -> procedure_call .)
    EQ              reduce using rule 183 (call_action -> procedure_call .)
    NEQ             reduce using rule 183 (call_action -> procedure_call .)
    GT              reduce using rule 183 (call_action -> procedure_call .)
    GE              reduce using rule 183 (call_action -> procedure_call .)
    LT              reduce using rule 183 (call_action -> procedure_call .)
    LE              reduce using rule 183 (call_action -> procedure_call .)
    IN              reduce using rule 183 (call_action -> procedure_call .)
    THEN            reduce using rule 183 (call_action -> procedure_call .)
    RBRACKET        reduce using rule 183 (call_action -> procedure_call .)
    COMMA           reduce using rule 183 (call_action -> procedure_call .)
    RPAREN          reduce using rule 183 (call_action -> procedure_call .)
    COLON           reduce using rule 183 (call_action -> procedure_call .)
    ELSE            reduce using rule 183 (call_action -> procedure_call .)
    ELSIF           reduce using rule 183 (call_action -> procedure_call .)
    DOWN            reduce using rule 183 (call_action -> procedure_call .)
    BY              reduce using rule 183 (call_action -> procedure_call .)
    TO              reduce using rule 183 (call_action -> procedure_call .)
    FI              reduce using rule 183 (call_action -> procedure_call .)
    WHILE           reduce using rule 183 (call_action -> procedure_call .)


state 14

    (150) bracketed_action -> do_action .

    SEMI            reduce using rule 150 (bracketed_action -> do_action .)


state 15

    (149) bracketed_action -> if_action .

    SEMI            reduce using rule 149 (bracketed_action -> if_action .)


state 16

    (60) location -> string_element .
